<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vtr_testing_honeycomb</name>
  <version>0.0.0</version>
  <description>The vtr_testing_honeycomb package.</description>
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2</depend>
  <depend>rosbag2_cpp</depend>

  <depend>vtr_common</depend>
  <depend>vtr_logging</depend>
  <depend>vtr_navigation</depend>
  <depend>vtr_lidar</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
