<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vtr_common</name>
  <version>0.0.0</version>
  <description>VTR utilities.</description>
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>lgmath</depend>
  <depend>vtr_messages</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
