<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vtr_lgmath_extensions</name>
  <version>0.0.0</version>
  <description>The vtr_lgmath_extensions package.</description>
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>OpenMP</build_depend>

  <depend>lgmath</depend>
  <depend>vtr_common</depend>
  <depend>vtr_logging</depend>
  <depend>vtr_vision</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->
  <!-- <test_depend>ament_cmake_clang_format</test_depend> -->
  <!-- <test_depend>ament_cmake_flake8</test_depend> -->
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <!-- <test_depend>ament_cmake_pep257</test_depend> -->
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
